--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -10,57 +10,9 @@
 
       <div class="row">
         <div class="col-sm-12 col-md-6">
-          <div class="card card--event mb-xl">
+          <div class="card card--program mb-xl">
             <div class="card__image">
-              <img src="./images/horadenuestrasenora.jpg" alt="LA HORA DE NUESTRA SEÑORA">
-            </div>
-            <h2 class="card__title mv-sm">LA HORA DE NUESTRA SEÑORA</h2>
-            <div class="card__subtitle">
-              <div class="card__date">
-                <p class="card__day">1 ABRIL</p>
-                <span class="card__subtitle-divisor">|</span>
-                <p class="card__hour">18:00 · 19:00</p>
-              </div>
-              <div class="card__tags">
-                <span class="card__subtitle-divisor">|</span>
-                <p class="card__tag-list">
-                  <span class="card__tag">INDUSTRIAL</span>
-                  <span class="card__tag">wave</span>
-                  <span class="card__tag">POST-PUNK</span>
-                <p>
-              </div>
-            </div>
-            <p class="card__description">Discos de Nuestra Señora hacen su misa. Material crudo.</p>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-6">
-          <div class="card card--event mb-xl">
-            <div class="card__image">
-              <img src="./images/indigo.jpg" alt="indigo">
-            </div>
-            <h2 class="card__title mv-sm">INDIGO</h2>
-            <div class="card__subtitle">
-              <div class="card__date">
-                <p class="card__day">4 ABRIL</p>
-                <span class="card__subtitle-divisor">|</span>
-                <p class="card__hour">19:00 · 20:00</p>
-              </div>
-              <div class="card__tags">
-                <span class="card__subtitle-divisor">|</span>
-                <p class="card__tag-list">
-                  <span class="card__tag">WAVE</span>
-                  <span class="card__tag">DRONE</span>
-                  <span class="card__tag">POST-PUNK</span>
-                <p>
-              </div>
-            </div>
-            <p class="card__description">Drones punkis, guitarreos wave y ríos de kraut teñidos en distintas proporciones de índigo. Claros y oscuros seleccionados por Boni G. Miranda.</p>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-6">
-          <div class="card card--event mb-xl">
-            <div class="card__image">
-              <img src="./images/fem.jpg" alt="Fem">
+              <img src="/images/fem.jpg" alt="Fem">
             </div>
             <h2 class="card__title mv-sm">FEM</h2>
             <div class="card__subtitle">
@@ -82,9 +34,35 @@
           </div>
         </div>
         <div class="col-sm-12 col-md-6">
-          <div class="card card--event mb-xl mb-xl">
+          <div class="card card--program mb-xl">
             <div class="card__image">
-              <img src="./images/bocadillogod.jpg" alt="EL BOCADILLO GOD">
+              <img src="/images/lapinata.jpg" alt="LA PIÑATA">
+            </div>
+            <h2 class="card__title mv-sm">LA PIÑATA</h2>
+            <div class="card__subtitle">
+              <div class="card__date">
+                <p class="card__day">10 ABRIL</p>
+                <span class="card__subtitle-divisor">|</span>
+                <p class="card__hour">21:00 · 22:00</p>
+              </div>
+              <div class="card__tags">
+                <span class="card__subtitle-divisor">|</span>
+                <p class="card__tag-list">
+                  <span class="card__tag">LIBRARY</span>
+                  <span class="card__tag">PSYCH</span>
+                  <span class="card__tag">DISTORTED</span>
+                <p>
+              </div>
+            </div>
+            <p class="card__description">Elena Córdoba presenta la piñata. Sorpresas.</p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-12 col-md-6">
+          <div class="card card--program mb-xl mb-xl">
+            <div class="card__image">
+              <img src="/images/bocadillogod.jpg" alt="EL BOCADILLO GOD">
             </div>
             <h2 class="card__title mv-sm">EL BOCADILLO GOD</h2>
             <div class="card__subtitle">
@@ -105,6 +83,80 @@
             <p class="card__description">Banda sonora ideal para una tarde perdida. Los jueves, Encarta reza al dios del bocadillo.</p>
           </div>
         </div>
+        <div class="col-sm-12 col-md-6">
+          <div class="card card--program mb-xl">
+            <div class="card__image">
+              <img src="/images/indigo.jpg" alt="indigo">
+            </div>
+            <h2 class="card__title mv-sm">INDIGO</h2>
+            <div class="card__subtitle">
+              <div class="card__date">
+                <p class="card__day">18 ABRIL</p>
+                <span class="card__subtitle-divisor">|</span>
+                <p class="card__hour">19:00 · 20:00</p>
+              </div>
+              <div class="card__tags">
+                <span class="card__subtitle-divisor">|</span>
+                <p class="card__tag-list">
+                  <span class="card__tag">WAVE</span>
+                  <span class="card__tag">DRONE</span>
+                  <span class="card__tag">POST-PUNK</span>
+                <p>
+              </div>
+            </div>
+            <p class="card__description">Drones punkis, guitarreos wave y ríos de kraut teñidos en distintas proporciones de índigo. Claros y oscuros seleccionados por Boni G. Miranda.</p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-12 col-md-6">
+          <div class="card card--program mb-xl">
+            <div class="card__image">
+              <img src="/images/ondaturbia.jpg" alt="ONDATURBIA">
+            </div>
+            <h2 class="card__title mv-sm">ONDATURBIA</h2>
+            <div class="card__subtitle">
+              <div class="card__date">
+                <p class="card__day">3 MAYO</p>
+                <span class="card__subtitle-divisor">|</span>
+                <p class="card__hour">18:30 · 19:30</p>
+              </div>
+              <div class="card__tags">
+                <span class="card__subtitle-divisor">|</span>
+                <p class="card__tag-list">
+                  <span class="card__tag">WAVE</span>
+                  <span class="card__tag">POST-PUNK</span>
+                  <span class="card__tag">ELECTRO</span>
+                <p>
+              </div>
+            </div>
+            <p class="card__description">No nitidez. Turbdo trbtodoio. No claro. No, claro. Claro, no. Free and odd</p>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6">
+          <div class="card card--program mb-xl">
+            <div class="card__image">
+              <img src="/images/horadenuestrasenora.jpg" alt="LA HORA DE NUESTRA SEÑORA">
+            </div>
+            <h2 class="card__title mv-sm">LA HORA DE NUESTRA SEÑORA</h2>
+            <div class="card__subtitle">
+              <div class="card__date">
+                <p class="card__day">6 MAYO</p>
+                <span class="card__subtitle-divisor">|</span>
+                <p class="card__hour">18:00 · 19:00</p>
+              </div>
+              <div class="card__tags">
+                <span class="card__subtitle-divisor">|</span>
+                <p class="card__tag-list">
+                  <span class="card__tag">INDUSTRIAL</span>
+                  <span class="card__tag">wave</span>
+                  <span class="card__tag">POST-PUNK</span>
+                <p>
+              </div>
+            </div>
+            <p class="card__description">Discos de Nuestra Señora hacen su misa. Material crudo.</p>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -116,9 +168,9 @@
 
       <div class="row">
         <div class="col-sm-12 col-md-6">
-          <div class="card card--event mb-xl">
+          <div class="card card--program mb-xl mb-xl">
             <div class="card__image">
-              <img src="./images/onair.jpg" alt="Love Call & LIE Radio ON AIR">
+              <img src="/images/onair.jpg" alt="Love Call & LIE Radio ON AIR">
             </div>
             <h2 class="card__title mv-sm">ON AIR</h2>
             <div class="card__subtitle">
@@ -140,9 +192,9 @@
           </div>
         </div>
         <div class="col-sm-12 col-md-6">
-          <div class="card card--event mb-xl">
+          <div class="card card--program mb-xl mb-xl">
             <div class="card__image">
-              <img src="./images/barrioabierto.jpg" alt="Barrio Abierto">
+              <img src="/images/barrioabierto.jpg" alt="Barrio Abierto">
             </div>
             <h2 class="card__title mv-sm">BARRIO ABIERTO</h2>
             <div class="card__subtitle">
