--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -2,7 +2,7 @@
   <div class="container container--medium">
     <nav class="navigation primary-navigation pv-sm">
       <a href="/">
-        <img class="logo" src="./lie-logo.svg" alt="Lie">
+        <img class="logo" src="/lie-logo.svg" alt="Lie">
       </a>
       <ul class="header-links">
         <li><a class="header-link" href="https://www.instagram.com/lieradio/">Instagram</a></li>
