--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -36,6 +36,32 @@
         <div class="col-sm-12 col-md-6">
           <div class="card card--program mb-xl">
             <div class="card__image">
+              <img src="/images/club94.jpg" alt="Fem">
+            </div>
+            <h2 class="card__title mv-sm">CLUB 94</h2>
+            <div class="card__subtitle">
+              <div class="card__date">
+                <p class="card__day">10 ABRIL</p>
+                <span class="card__subtitle-divisor">|</span>
+                <p class="card__hour">19:30 · 20:30</p>
+              </div>
+              <div class="card__tags">
+                <span class="card__subtitle-divisor">|</span>
+                <p class="card__tag-list">
+                  <span class="card__tag">ELECTRONICA</span>
+                  <span class="card__tag">TECHNO</span>
+                  <span class="card__tag">RITUAL</span>
+                <p>
+              </div>
+            </div>
+            <p class="card__description">Some kind of introspective dancefloor sounds mixed by Lorenzo.</p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-12 col-md-6">
+          <div class="card card--program mb-xl">
+            <div class="card__image">
               <img src="/images/lapinata.jpg" alt="LA PIÑATA">
             </div>
             <h2 class="card__title mv-sm">LA PIÑATA</h2>
@@ -57,8 +83,6 @@
             <p class="card__description">Elena Córdoba presenta la piñata. Sorpresas.</p>
           </div>
         </div>
-      </div>
-      <div class="row">
         <div class="col-sm-12 col-md-6">
           <div class="card card--program mb-xl mb-xl">
             <div class="card__image">
@@ -83,6 +107,8 @@
             <p class="card__description">Banda sonora ideal para una tarde perdida. Los jueves, Encarta reza al dios del bocadillo.</p>
           </div>
         </div>
+      </div>
+      <div class="row">
         <div class="col-sm-12 col-md-6">
           <div class="card card--program mb-xl">
             <div class="card__image">
@@ -107,8 +133,6 @@
             <p class="card__description">Drones punkis, guitarreos wave y ríos de kraut teñidos en distintas proporciones de índigo. Claros y oscuros seleccionados por Boni G. Miranda.</p>
           </div>
         </div>
-      </div>
-      <div class="row">
         <div class="col-sm-12 col-md-6">
           <div class="card card--program mb-xl">
             <div class="card__image">
@@ -133,6 +157,8 @@
             <p class="card__description">No nitidez. Turbdo trbtodoio. No claro. No, claro. Claro, no. Free and odd</p>
           </div>
         </div>
+      </div>
+      <div class="row">
         <div class="col-sm-12 col-md-6">
           <div class="card card--program mb-xl">
             <div class="card__image">
